k8s (copier 1)/cineapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cineapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cineapi
  template:
    metadata:
      labels:
        app: cineapi
    spec:
      containers:
        - name: cineapi
          image: cineapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cineapi
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: cineapi
