k8s (copier 1)/cinefront.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinefront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinefront
  template:
    metadata:
      labels:
        app: cinefront
    spec:
      containers:
      - name: cinefront
        image: cinefront:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cinefront
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cinefront
