k8s (copier 1)/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cinebook-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cinebook-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - cinebook-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: cineapi.default.svc.cluster.local
            port:
              number: 5000
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /admin.html
      route:
        - destination:
            host: cinefront.default.svc.cluster.local
            port:
              number: 80
